tests/lean/439.lean.expected.out
fn : {p : P} → Bar.fn p
439.lean:20:7-20:12: error: function expected at
  Fn.imp fn
term has type
  Bar.fn ?m
439.lean:31:7-31:11: error: function expected at
  Fn.imp fn
term has type
  Bar.fn ?m
Fn.imp fn : Bar.fn p
Fn.imp fn' Bp : Bar.fn p
439.lean:41:7-41:12: error: application type mismatch
  Fn.imp fn' p
argument
  p
has type
  P : Sort u
but is expected to have type
  Bar.fn ?m : Sort ?u
